# CompileTheory

./: CMakeLists.txt  README.md  input.txt  main.cpp
include/: Ex1.h  Ex2.h  PreProcess.h  RecursionDrop.h  Reg2NFA.h  RemoveLeftRecursion.h  natural_cut_word.h  operator_prior.h  person_wolf_sheep_vegetable.h  utils.h
source/: Ex1.cpp  Ex2.cpp  PreProcess.cpp  RecursionDrop.cpp  Reg2NFA.cpp  natural_cut_word.cpp  operator_prior.cpp  person_wolf_sheep_vegetable.cpp  removeleftrecursion.cpp
